@@ -43,7 +43,7 @@
 		Some Core features:
 	</p>
 	<ul>
-		<li>Supports multiple databases (MSSQL, MS Access, SQLite, Oracle, OLEDB etc)</li>
+		<li>Supports multiple databases (MSSQL, MSSQL CE, MS Access, SQLite, Oracle, OLEDB etc)</li>
 		<li>Integrated text templating system for generating SQL, code or data scripts</li>
 		<li>Syntax highlighting (with printing support)</li>
 		<li>Load and save SQL script files</li>
